# grafana-pipeline

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: convert.yml
dashboards/: Loki.json  Longhorn.json  Traefik.json  external-dns.json
datasources/: loki.yaml
grafana_settings/: dashboard.py  datasource.py  utilities.py
templates/: dashboard-configmap.yaml.j2  datasource-secret.yaml.j2
